--- a/photographer-webapp-backend/package.json
+++ b/photographer-webapp-backend/package.json
@@ -2,7 +2,7 @@
   "name": "photographer-webapp-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.5.0",
+    "nodemailer": "^6.7.7",
+    "nodemon": "^2.0.19"
   }
 }
